10.0.4 - Allow update a field in json column.